[metadata]
name = Kwranking
version = 2014.4
summary = Assigning power consumption to virtual cluster tenants.
description-file =
    README.rst
author = Mouchel Thomas
author-email = thomspirit@gmail.com
home-page = https://github.com/Farrael/Kwranking
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    kwranking

[entry_points]
console_scripts =
    kwranking-api = kwranking.api.app:start

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
